# npu_chatbot

./: .gitignore  README.md  dlmodel.py  pyproject.toml
src/npu_chatbot/: front.py  front.ui  main.py  system_prompt.py
