[project]
name = "npu-chatbot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "intel-npu-acceleration-library ==1.4.0",
    "pyside6 ==6.9.0",
    "sacremoses ==0.1.1",
    "sentencepiece ==0.2.0",
    "setuptools ==78.1.0",
    "torch ==2.6.0",
]

[project.scripts]
npu_chatbot = "npu_chatbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/npu_chatbot"]
